<resources>
    <string name="app_name">BiblioSocabaya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_salir">Salir</string>
    <string name="action_cuenta">Admonistrar</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>


    <string name="menu_home">Generalidades</string>
    <string name="menu_gallery">Bibliografias</string>
    <string name="menu_slideshow">Enciclopedias</string>
    <string name="menu_tools">Filosofia</string>
    <string name="menu_share">contactos</string>
    <string name="menu_send">Salir</string>


    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hint_id">Codigo</string>
    <string name="hint_titulo">Titulo</string>
    <string name="hint_autor">Autor</string>
    <string name="hint_Categoria">Categoria</string>
    <string name="hint_fecha_ingreso">Fecha de ingreso</string>
    <string name="hint_description">Descripcion</string>


</resources>
